# health-hub

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.omc/: project-memory.json
.omc/sessions/: 3e43d1a4-733f-4dbd-963e-f091c93a1fe6.json  bae03744-3ef1-4c9c-97ac-12e4d1759444.json  f13072b1-6b9f-4ae3-b27e-115e55d9822a.json
.omc/state/: hud-stdin-cache.json  idle-notif-cooldown.json  mission-state.json
auth/: oauth_setup.py
docker/: cron-entrypoint.sh  crontab
docs/: db-conventions.md  deploy.md  plan.md
mcp_server/: server.py
migrations/: 001_initial.sql  002_add_cpap.sql  003_add_o2ring.sql  004_expand_fitbit.sql  005_add_health_connect.sql
src/: backfill.py  collector.py  cpap_parser.py  db.py  fitbit_client.py  formatter.py  ingest_server.py  main.py  migrations.py  o2ring_collector.py  raw_store.py  telegram.py
src/cli/: backup.py  debug.py  production.py  serve_ingest.py
tests/: conftest.py
tests/e2e/: test_cli_smoke.py  test_serve_ingest_cli.py
tests/integration/: test_collector.py  test_collector_403.py  test_ingest_server.py  test_mcp_hc_tools.py  test_mcp_pagination.py  test_mcp_ro_connection.py
tests/unit/: test_backfill.py  test_backup.py  test_collector_parsers.py  test_cpap_ahi.py  test_cpap_parser.py  test_db.py  test_db_commit_hygiene.py  test_devices_date_decoupled.py  test_fitbit_client.py  test_formatter.py  test_formatter_special_chars.py  test_formatter_sync_issues.py  test_migrations.py  test_o2ring_collector.py  (+5 more)
(+23 files in other folders)
