[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-hub"
version = "0.1.0"
description = "Fitbit + CPAP + O2Ring → SQLite + Telegram + MCP"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "pyedflib>=0.1.34",
    "bleak>=0.21",
    "mcp>=1.0",
]

[project.scripts]
hhub = "src.main:main"
hhub-mcp = "mcp_server.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "mcp_server*", "auth*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src", "mcp_server"]
omit = ["tests/*"]
